base rebuild de proy1
